# ComInterfaceGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  ComInterfaceGenerator.pro  Generate.ps1  README.md  ResolveDependencies.ps1
Actions/: Actions.csproj  Actions.sln  Program.cs
Dependencies/: CMakeLists.txt
IDL/: Cidl.g4  Core.cidl  Example.Network.cidl  Example.Network2.cidl  Network.cidl  Network2.cidl
Src/: CMakeLists.txt  TypeCache.cpp  TypeCache.h  main.cpp
Src/Constant/: Constant.h  DoubleConstant.h  FloatConstant.h  IntegerConstant.h  NumericConstant.h  StringConstant.h
Src/Generator/: CodeFile.h  ExternalModule.h  Generator.h  GeneratorModule.h  Guid.h
Src/Generator/Attribute/: Attribute.h  AttributeUtils.h  ConstAttribute.h  GuidAttribute.h  InAttribute.h  OutAttribute.h
Src/Generator/CSharp/: CSharpCodeFile.h  CSharpGenerator.h
Src/Generator/Cpp/: CppCodeFile.h  CppGenerator.h  CppMarshaler.h
Src/Parser/: AttributeListParser.h  AttributeParser.h  EnumParser.h  InterfaceParser.h  MethodParser.h  ModuleParser.h  StringResolve.h  StructParser.h  TypeNameParser.h
Src/Type/: AttributeType.h  EnumType.h  InterfaceType.h  Method.h  Module.h  StructType.h  Type.h  TypeRef.h
